tests/baselines/reference/getAndSetNotIdenticalType3.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType3.ts(5,9): error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type
  Type 'number' is not assignable to type 'string'.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(9,9): error TS2322: Type 'A<string>' is not assignable to type 'A<number>'.
  Type 'string' is not assignable to type 'number'.
tests/cases/compiler/getAndSetNotIdenticalType3.ts(15,1): error TS2322: Type 'A<number>' is not assignable to type 'A<string>'.


==== tests/cases/compiler/getAndSetNotIdenticalType3.ts (3 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<number>;
        get x(): A<number> {
            ~
!!! error TS2380: The return type of a 'get' accessor must be assignable to its 'set' accessor type
!!! error TS2380:   Type 'number' is not assignable to type 'string'.
            return this.data;
        }
        set x(v: A<string>) {
            this.data = v;
            ~~~~~~~~~
!!! error TS2322: Type 'A<string>' is not assignable to type 'A<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
        }
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;
    ~~~
!!! error TS2322: Type 'A<number>' is not assignable to type 'A<string>'.